[gd_scene load_steps=4 format=3 uid="uid://g1hkuvhh1s8w"]

[ext_resource type="Script" uid="uid://bmmheuu5fgj02" path="res://Scenes/Area Transitioner/transitioner.gd" id="1_d1xca"]
[ext_resource type="Texture2D" uid="uid://br1fldw48naui" path="res://Assets/Used/SelfMade/sentinel_arrow.png" id="2_d1xca"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oiedg"]
radius = 8.06226

[node name="Transitioner" type="Area2D"]
script = ExtResource("1_d1xca")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.032, 0.032)
texture = ExtResource("2_d1xca")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oiedg")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
